fixed herosection action buttons alignement at small screens

--- a/src/components/layout/Herosection/Herosection.module.scss
+++ b/src/components/layout/Herosection/Herosection.module.scss
@@ -33,7 +33,7 @@
 			flex: 0 0 30%;
 
 			@include mixins.sm {
-				flex: 1 1 auto;
+				flex: 1;
 			}
 		}
 	}
